
2009-Apr-19 Struan Robertson
  
  * ReactionManage.h/MesmerILT.h: Replace derived class headers with base class to break include dependencies.
  
2009-Apr-19 Struan Robertson
  
  * ReactionManager.cpp/Reaction.h: Source term discovery pushed onto to derived reaction classes.
  
2009-Apr-19 Struan Robertson
  
  * ReactionManager.cpp: Minor change related to basis set methods.
  
2009-Apr-19 Struan Robertson
  
  * ReactionManager.cpp: Minor change to correct for QA failure.
  
2009-Apr-17 Chris Morley
  
  * mesmer1.xsl: minor revision of wording of output.
  
2009-Apr-13 Struan Robertson

  * MesmerQA: Update of isopropyl test.

2009-Apr-7 Dave Glowacki
  *ReactionManager.cpp: fix some bugs which came to light for testing the i-propyl system- the case of 1 isomer with only irrreversible channels
  *clean up some other stuff

2009-Apr-5 Struan Robertson

  * ReactionManager.cpp: Fix for grid search, values for Einf where being calculated incorrectly.
  * MesmerQA: Update of isopropyl test.

2009-Apr-5 Struan Robertson

  * ReactionManager.cpp: New section added to estimate threshold of irreversible reaction, which is then used to determined energy limits.

2009-Apr-4 Struan Robertson

  * MesmerILT.cpp: Fixed problem with Unimoleculer ILT calculation.
  * MesmerQA: Update of isopropyl test.

2009-Mar-31 Dave Glowacki
  *add a few changes to LINUX MakeFile

2009-Mar-31 Dave Glowacki
  * updates to manual: (1) discussion of Linux compilation issues & (2) discussion of Bartis Widom output
  * add to Bartis Widom code so that it checks separation between CSEs and IEREs and generates warning messages if appropriate
  * update baselines

2009-Mar-30 Struan Robertson

  * MesmerQA: Initial checkin of isopropyl test.

2009-Mar-30 Dave Glowacki
  * fixed GCC compiler problem that showed up when testing 64 bit compilation

2009-Mar-26 Dave Glowacki
  * fixed GCC compiler problem that showed up when testing 64 bit compilation

2009-Mar-21 Struan Robertson
